# csvex

./: Cargo.toml  README.md  header.csv  test.csv
src/: cols.rs  filter.rs  fmt.rs  histogram.rs  index.rs  main.rs  nav.rs  prompt.rs  read.rs  reader.rs  size.rs  source.rs  spinner.rs  style.rs  ui.rs
src/filter/: compiler.rs  engine.rs  lexer.rs  parser.rs
src/read/: config.rs  reader.rs
test/: header.csv  test.csv
