[package]
name = "csvex"
version = "0.1.0"
edition = "2021"

[dependencies]
# Efficient allocator
mimalloc = { version = "0.1", default-features = false }
# Terminal UI
tui = { path = "../tui" } #git = "https://github.com/Virgiel/tui" }
# CSV parser
csv = "1.2.1"
csv-core = "0.1.10"
# Conventional UTF-8 string
bstr = "1.4.0"
# Efficient locks
parking_lot = "0.12.1"
# Precise decimal
rust_decimal = { version = "1.29.1", default-features = false }
# Regular expression lib
regex = "1.7.3"
# Line editor tool
reedline = "0.18.0"
# Temporary file
tempfile = "3.5.0"
# CLI args parser
clap = { version = "4.2.2", features = ["derive"] }
# Indexed hashmap
indexmap = "1.9.3"


# Optimal size and perf
[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
